--- a/PoliceSystem/src/sample/MainFrame.fxml
+++ b/PoliceSystem/src/sample/MainFrame.fxml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.MainFrameController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane fx:id="mainFrameAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainFrameController">
+   <children>
+      <SplitPane dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Label layoutX="88.0" layoutY="38.0" text="Welcome to StreetSafe" />
+                  <Label layoutX="25.0" layoutY="91.0" text="Username:" />
+                  <Label layoutX="27.0" layoutY="145.0" text="Password:" />
+                  <Label layoutX="27.0" layoutY="267.0" text="Create New Account Here:" />
+                  <TextField layoutX="105.0" layoutY="87.0" />
+                  <PasswordField layoutX="105.0" layoutY="141.0" />
+                  <Button layoutX="209.0" layoutY="210.0" mnemonicParsing="false" text="Login" />
+                  <Button layoutX="99.0" layoutY="320.0" mnemonicParsing="false" text="Create Account" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <SplitPane dividerPositions="0.5" layoutX="-2.0" maxHeight="-Infinity" maxWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="300.0">
+                    <items>
+                      <AnchorPane fx:id="notificationPane" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+                      <AnchorPane fx:id="mapPane" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+                    </items>
+                  </SplitPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
 </AnchorPane>
