--- a/PoliceSystem/src/sample/MainFrame.fxml
+++ b/PoliceSystem/src/sample/MainFrame.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
+            stylesheets="Stylesheet.css"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="sample.MainFrameController"
             prefHeight="400.0" prefWidth="600.0">
