--- a/PoliceSystem/src/sample/NewEntryFrame.fxml
+++ b/PoliceSystem/src/sample/NewEntryFrame.fxml
@@ -1,14 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.gluonhq.charm.glisten.control.TextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.NewEntryFrameController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="mainFrameAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainFrameController">
+   <children>
+      <SplitPane dividerPositions="0.2809364548494983" layoutX="1.0" layoutY="-1.0" prefHeight="400.0" prefWidth="600.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Button layoutY="21.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="165.0" text="Previous Cases" />
+                  <Button layoutY="333.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="165.0" text="Map " />
+                  <Button layoutY="256.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="165.0" text="Notifications" />
+                  <Button layoutY="179.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="165.0" text="Statistics" />
+                  <Button layoutY="99.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="165.0" text="New Entry" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="494.0" prefWidth="427.0">
+               <children>
+                  <ScrollPane layoutY="-3.0" prefHeight="400.0" prefWidth="427.0">
+                     <content>
+                        <Pane prefHeight="399.0" prefWidth="409.0">
+                           <children>
+                              <BorderPane prefHeight="138.0" prefWidth="138.0">
+                                 <bottom>
+                                    <Button mnemonicParsing="false" text="Browse" BorderPane.alignment="CENTER" />
+                                 </bottom>
+                                 <center>
+                                    <ImageView fitHeight="81.0" fitWidth="97.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                                       <image>
+                                          <Image url="@../../../../../../Pictures/NoImage.png" />
+                                       </image>
+                                    </ImageView>
+                                 </center>
+                              </BorderPane>
+                              <Label layoutX="138.0" layoutY="14.0" text="Name:" />
+                              <Label layoutX="137.0" layoutY="42.0" text="Date of Birth:" />
+                              <Label layoutX="137.0" layoutY="69.0" text="Age:" />
+                              <TextField layoutX="176.0" layoutY="10.0" />
+                              <TextField layoutX="209.0" layoutY="39.0" prefHeight="25.0" prefWidth="38.0" promptText="mm" />
+                              <Label layoutX="249.0" layoutY="44.0" text="/" />
+                              <TextField layoutX="256.0" layoutY="40.0" prefHeight="25.0" prefWidth="28.0" promptText="dd" />
+                              <TextField layoutX="294.0" layoutY="40.0" prefHeight="25.0" prefWidth="40.0" promptText="yyyy" />
+                              <Label layoutX="287.0" layoutY="44.0" text="/" />
+                              <TextField layoutX="166.0" layoutY="65.0" prefHeight="25.0" prefWidth="28.0" />
+                              <MenuButton layoutX="136.0" layoutY="99.0" mnemonicParsing="false" text="Status">
+                                <items>
+                                  <MenuItem mnemonicParsing="false" text="Married" />
+                                  <MenuItem mnemonicParsing="false" text="Single" />
+                                </items>
+                              </MenuButton>
+                              <TextArea layoutX="23.0" layoutY="187.0" prefHeight="98.0" prefWidth="351.0" promptText="Case Details" />
+                           </children>
+                        </Pane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
 </AnchorPane>
